Les bases de Rune et RunePage sont posées, il reste du boulot et c'est pas debug

--- a/fenetre.ui
+++ b/fenetre.ui
@@ -278,7 +278,7 @@
         <widget class="QListWidget" name="SceauxList"/>
        </item>
        <item row="1" column="2">
-        <widget class="QListWidget" name="GlyohesList"/>
+        <widget class="QListWidget" name="GlyphesList"/>
        </item>
        <item row="1" column="3">
         <widget class="QListWidget" name="QuintList"/>
