--- a/fenetre.ui
+++ b/fenetre.ui
@@ -10,6 +10,24 @@
     <height>541</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1113</width>
+    <height>541</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1113</width>
+    <height>541</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Créateur de page de runes</string>
   </property>
@@ -28,8 +46,11 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="LayoutBase" rowstretch="1,10" columnstretch="3,8,2">
+     <property name="leftMargin">
+      <number>5</number>
+     </property>
      <property name="rightMargin">
-      <number>10</number>
+      <number>5</number>
      </property>
      <property name="bottomMargin">
       <number>5</number>
